--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "cypress": "3.4.1"
+    "@cypress/code-coverage": "1.10.0",
+    "cypress": "3.4.1",
+    "istanbul-lib-coverage": "2.0.5",
+    "nyc": "14.1.1"
   }
 }
